# minecraft-scanner

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  compile.sh  compile_docker.sh  readme.md
.docker/: Dockerfile  compile.sh
.github/workflows/: cmake-multi-platform.yml  compile-dev.yml  compile-master.yml
src/: main.cpp  scanner.cpp  scanner.hpp  threads.hpp  types.h
